Actualizacion de las pantallas para colocarlas responsive, comienzo con la creacion de la pantalla de calculo de aislamiento

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <nav>
         <ul class="menu-navegacion ">
-            <li>Inicio</li>
-            <li>Motores</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="motores.html">Motores</a></li>
             <li>Transformadores</li>
-            <li>TTR</li>
+            <li><a href="calculo_aislamiento.html">Calculo de aislamiento</a></li>
         </ul>
     </nav>
     
@@ -38,6 +38,8 @@
                 </ul>            
 
             </article>
+
+            
             <article class="articulo2">
                 <h3>CIRCUITO DE ALIMENTACIÓN</h3>
                 <ul>
@@ -114,6 +116,11 @@
 
             <li><a href="https://www.netaworld.org/">InterNational Electrical Testing Association: Home</a>
             Acceptance Testing Specifications for Electrical Power Distribution Equipment and Systems (NETA ATS-2007)</li>
+
+
+            <li><a href="https://translate.google.com/translate?u=https://standards.ieee.org/ieee/43/4791/&hl=es&sl=en&tl=es&client=srp">IEEE 43-2013</a> IEEE Standards Association</li>
+
+
 
         </ul>
 
