Se establecen atributos para el auto ajuste de textos grandes, se optimiza y se establecen atributos  a las tablas de calculo, se optimiza lavisualizacion responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="motores.html">Motores</a></li>
             <li>Transformadores</li>
-            <li><a href="calculo_aislamiento.html">Calculo de aislamiento</a></li>
+            <li><a href="calculo_aislamiento.html">Cálculo</a></li>
         </ul>
     </nav>
     
