--- a/motores.html
+++ b/motores.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="motores.html">Motores</a></li>
             <li>Transformadores</li>
-            <li><a href="calculo_aislamiento.html">Calculo de aislamiento</a></li>
+            <li><a href="calculo_aislamiento.html">Cálculo</a></li>
         </ul>
     </nav>
     
