Se comienza con la programacion del archivo script, se programa para guardar y recuperar la informacion del localStorage, se programa para navegar con la tecla enter atraves de todos los campos de la pagina

--- a/calculo_aislamiento.html
+++ b/calculo_aislamiento.html
@@ -34,7 +34,7 @@
                         <td>Tipo:</td>
                         <td>
 
-                            <select name="tipo-equipo" id="tipo-equipo" class="tipo-equipo">
+                            <select name="tipo-equipo" id="tipo-equipo" class="tipo-equipo dato-importante">
                                 <option value="MOTOR">MOTOR</option>
                                 <option value="TRANSFORMADOR">TRANSFORMADOR</option>
                             </select>
@@ -88,7 +88,7 @@
                 <tbody>
                     <tr>
                         <td>Temperatura de la carcasa del motor (°C):</td>
-                        <td><input type="number" name="temperatura" id="temperatura"  placeholder="valor numérico"></td>
+                        <td><input type="number" name="temperatura" id="temperatura" class="dato-importante" placeholder="valor numérico"></td>
 
                     </tr>
                     <tr>
@@ -108,57 +108,57 @@
 
                         <tr>
                             <td>30 seg</td>
-                            <td><input type="number" name="valor30seg" id="valor30seg" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor30seg" id="valor30seg" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>1 min</td>
-                            <td><input type="number" name="valor1min" id="valor1min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor1min" id="valor1min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>2 min</td>
-                            <td><input type="number" name="valor2min" id="valor2min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor2min" id="valor2min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>3 min</td>
-                            <td><input type="number" name="valor3min" id="valor3min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor3min" id="valor3min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>4 min</td>
-                            <td><input type="number" name="valor4min" id="valor4min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor4min" id="valor4min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>5 min</td>
-                            <td><input type="number" name="valor5min" id="valor5min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor5min" id="valor5min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>6 min</td>
-                            <td><input type="number" name="valor6min" id="valor6min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor6min" id="valor6min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>7 min</td>
-                            <td><input type="number" name="valor7min" id="valor7min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor7min" id="valor7min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>8 min</td>
-                            <td><input type="number" name="valor8min" id="valor8min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor8min" id="valor8min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>9 min</td>
-                            <td><input type="number" name="valor9min" id="valor9min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor9min" id="valor9min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr>
 
                         <tr>
                             <td>10 min</td>
-                            <td><input type="number" name="valor10min" id="valor10min" placeholder="valor numérico"></td>
+                            <td><input type="number" name="valor10min" id="valor10min" class="dato-importante" placeholder="valor numérico"></td>
                         </tr> 
 
 
