Se agregaron los botones para el borrado de los datos en el localstorage y en la pantalla, se coloco mensaje de alerta para que el campo de temperatura de la carcaza del motor no este vacio al momento de calcular, se coloco los vaoleres de temperatura de refrencia dependiedo del tipo de equipo que se selccione, se programo el calculo del factor de correccion de temeperatura

--- a/calculo_aislamiento.html
+++ b/calculo_aislamiento.html
@@ -168,6 +168,10 @@
 
                 </table>
 
+                <button type="reset" id="reset" class="reset">BORRAR</button>
+                <button type="button" id="calcular" class="calcular">CALCULAR</button>
+
+
                 
             </table>
 
