Se realiza mejoras en los diferentes estilos, se corrigen ajustes responsive para los diferentes tamaños, se mejora la visualizacion cuando se  selecciona  cada item del menu

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fallas de un motor</title>
 
     <link rel="stylesheet" href="style/style.css">
 
@@ -16,10 +16,10 @@
 
     <nav>
         <ul class="menu-navegacion ">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="motores.html">Motores</a></li>
-            <li>Transformadores</li>
-            <li><a href="calculo_aislamiento.html">Cálculo</a></li>
+            <li class="nav-item"><a href="index.html">Inicio</a></li>
+            <li class="nav-item"><a href="motores.html">Motores</a></li>
+            <li class="nav-item">Transformadores</li>
+            <li class="nav-item"><a href="calculo_aislamiento.html">Cálculo</a></li>
         </ul>
     </nav>
     
