--- a/motores.html
+++ b/motores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Motores</title>
 
     <link rel="stylesheet" href="style/style.css">
 
@@ -16,10 +16,10 @@
 
     <nav>
         <ul class="menu-navegacion ">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="motores.html">Motores</a></li>
-            <li>Transformadores</li>
-            <li><a href="calculo_aislamiento.html">Cálculo</a></li>
+            <li class="nav-item"><a href="index.html">Inicio</a></li>
+            <li class="nav-item"><a href="motores.html">Motores</a></li>
+            <li class="nav-item">Transformadores</li>
+            <li class="nav-item"><a href="calculo_aislamiento.html">Cálculo</a></li>
         </ul>
     </nav>
     
@@ -31,10 +31,9 @@
                 <h3>¿QUÉ ES?</h3>
 
                 <p>
-                    Es la medición en ohm de la dificultad de movimiento de la corriente eléctrica a través de un medio cuando un voltaje es aplicado.
-                    La medición se hace en un ambiente controlado, se aplica un voltaje DC predeterminado con un tiempo de carga predeterminado también, para obtener un valor en Mega ohm del valor de resistencia entre la fase 1 y tierra.
+                    Es la medición en ohm de la dificultad de movimiento de la corriente eléctrica a través de un medio cuando un voltaje es aplicado. La medición se hace en un ambiente controlado, se aplica un voltaje DC predeterminado con un tiempo de carga predeterminado también, para obtener un valor en Mega ohm del valor de resistencia entre la fase 1 y tierra.
 
-                </p>  
+                </p><br><br>
                 
                 <h3>¿POR QUÉ ES IMPORTANTE?</h3>
                 <p>Un valor bajo de RESISTENCIA A TIERRA (RTG) puede estar indicando que el aislamiento necesita ser lavado, reforzado o secado. Si la condición que genera la baja resistencia no es corregida y en la tendencia, el valor continúa cayendo, este puede fallar completamente, dañando en consecuencia el devanado del estátor, lo que requerirá un rebobinado que es más costoso</p>
@@ -56,7 +55,7 @@
             <article class="articulo9">
                 <h3>PUNTOS IMPORTANTES A TOMAR EN CUENTA</h3>
                 <ul>
-                    <li>Todas las lecturas de resistencia a tierra deben ser corregidas con temperatura para poder evaluar la tendencia.</li>
+                    <li>Todas las lecturas de resistencia a tierra deben ser corregidas, debido a que la temperatura afecta la medición y asi podríamos evaluar la tendencia.</li>
                     <li>El valor de corrección de temperatura para motores deber ser a 40°C (104°F)</li>
                     <li>La corrección de temperatura es requerida gracias a que las condiciones del sistema aislante pueden cambiar dependiendo de las condiciones operativas, atmosféricas o ambientales.</li>
                     <li>Si se observa una caída en la tendencia, es necesario verificar la humedad y la temperatura.</li>
